[package]
name = "my-zcash-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zingolib = { git="https://github.com/aarnott/zingolib", default-features=true, branch = "dev" }
zingoconfig = { git="https://github.com/aarnott/zingolib", default-features=true, branch = "dev" }
http = "*"
lazy_static = "1.4.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
