[package]
name = "my-zcash-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zingolib = { path = "./external/zingolib/zingolib", default-features = true }
zingoconfig = { path = "./external/zingolib/zingoconfig", default-features = true }
http = "*"
lazy_static = "1.4.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
